--- a/home.html
+++ b/home.html
@@ -28,7 +28,8 @@
             <h2>Tasks</h2>
 
             <div id="tasks">
-                <!-- <div class="task">
+                
+                <div class="task">
                     <div class="content">
                         <input 
                             type="text" 
@@ -41,7 +42,8 @@
                         <button class="edit">Edit</button>
                         <button class="delete">Delete</button>
                     </div>
-                </div> -->
+                </div>
+                
             </div>    
         </section>
 
